# wasmedgeup

./: .markdownlint.yml  .yaml-lint.yml  CHANGELOG.md  Cargo.toml  README.md  knope.toml  spec.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/actions/cross-compile-prelude/: action.yml
.github/actions/setup-rust/: action.yml
.github/linters/: .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: audit_check.yml  dependency-review.yml  prepare-release.yml  release.yml  rust.yml  scorecards.yml  superlinter.yml
src/: cli.rs  config.rs  constants.rs  error.rs  fs.rs  http.rs  lib.rs  main.rs  platform.rs  prelude.rs  target.rs
src/api/: mod.rs  releases.rs
src/commands/: install.rs  list.rs  mod.rs  plugin.rs  remove.rs  use_cmd.rs
src/commands/plugin/: install.rs  list.rs  mod.rs  remove.rs  specs.rs  utils.rs  version.rs
src/shell_utils/: env.fish  env.nu  env.sh  mod.rs  unix.rs  windows.rs
src/system/: cpu.rs  detector.rs  gpu.rs  mod.rs  os.rs  plugins.rs  spec.rs  toolchain.rs
tests/: client_test.rs  install_test.rs  plugin-list-tests.rs  plugin_install_test.rs  plugin_remove_tests.rs  remove_test.rs  shell_test.rs  system-tests.rs  test_utils.rs  use_test.rs
