[package]
name = "wasmedgeup"
version = "0.1.1"
edition = "2021"
authors = ["hydai <hydai@secondstate.io>"]
description = "An installer for the Wasmedge runtime and plugins."
homepage = "https://github.com/WasmEdge/wasmedgeup"
repository = "https://github.com/WasmEdge/wasmedgeup"
license = "Apache-2.0"

[dependencies]
cfg-if = "1.0.3"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
indicatif = { version = "0.18.0", features = ["tokio"] }
reqwest = "0.12.24"
semver = "1.0.27"
snafu = "0.8.9"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
walkdir = "2.5.0"
sha2 = "0.10"
serial_test = "3.2.0"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
flate2 = "1.1.4"
tar = "0.4.44"

[target.'cfg(windows)'.dependencies]
zip = "6.0.0"
winreg = "0.55"

[dev-dependencies]
rstest = "0.26.1"
