[package]
name = "wasmedgeup"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
authors = ["hydai <hydai@secondstate.io>"]
description = "An installer for the Wasmedge runtime and plugins."
homepage = "https://github.com/WasmEdge/wasmedgeup"
repository = "https://github.com/WasmEdge/wasmedgeup"
license = "Apache-2.0"

[dependencies]
cfg-if = "1.0.4"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
git2 = { version = "0.20.4", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }
indicatif = { version = "0.18.4", features = ["tokio"] }
reqwest = "0.13.3"
semver = "1.0.28"
snafu = "0.9.0"
tempfile = "3.27.0"
tokio = { version = "1.52.2", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
walkdir = "2.5.0"
sha2 = "0.11"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.4"
which = "8"
raw-cpuid = "11"

[target.'cfg(unix)'.dependencies]
flate2 = "1.1.9"
tar = "0.4.45"

[target.'cfg(windows)'.dependencies]
zip = "8.6.0"
winreg = "0.56"
nvml-wrapper = "0.12.1"
wmi = "0.18.4"

[target.'cfg(windows)'.dependencies.opencl3]
version = "0.12"
optional = true

[features]
default = []
opencl = ["dep:opencl3"]

[dev-dependencies]
serial_test = "3.4.0"

[profile.dev.package."*"]
debug = false
